fdo#88241 Floating sidebar second call to same item should dismiss it

Note that this was written to be used in combination with
commit 304e2002a053e9eb54e36462165eca831da8aeb2 to give back the
behavior of calling and dismissing the styles and formatting dialog.

Change-Id: Ic05db180425b0a2dcd05774b6fa0227b01464731
Reviewed-on: https://gerrit.libreoffice.org/13980
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Jan Holesovsky <kendy@collabora.com>
(cherry picked from commit 592984cea1a9cc545358b8d6077113a658834aa5)